jlamontSC-test/src/objects/Leadership__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Club_EntityId__c</fullName>
        <formula>Club_Entity__r.EntityId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Club Entity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Club entities such as chapters and groups.</description>
        <label>Club Entity</label>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipName>Leadership</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Leaders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Control_Total_Number__c</fullName>
        <description>Dummy number field to use for control total report bucket. If other Leadership fields are built that can be used instead, this can be deleted once the snapshot is updated to use that field.</description>
        <label>Control Total Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Entity_Team_Category__c</fullName>
        <formula>TEXT(Club_Entity__r.Entity_Category__c)</formula>
        <label>Entity/Team Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Leader_Position__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Position within a club entity or team</description>
        <label>Position</label>
        <referenceTo>Leader_Position__c</referenceTo>
        <relationshipLabel>Leadership/Team Membership</relationshipLabel>
        <relationshipName>Leadership</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Position Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Position_Begins__c</fullName>
        <label>Position Begins</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Ends__c</fullName>
        <label>Position Ends</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Status_Changed__c</fullName>
        <label>Position Status Changed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Position_Status__c</fullName>
        <label>Position Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Prospective</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Activities Chair</fullName>
                </value>
                <value>
                    <fullName>Administrative Staff</fullName>
                </value>
                <value>
                    <fullName>Advisor</fullName>
                </value>
                <value>
                    <fullName>Advisory Member</fullName>
                </value>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>Air Quality</fullName>
                </value>
                <value>
                    <fullName>Alternate Contact</fullName>
                </value>
                <value>
                    <fullName>Aquatic Resources</fullName>
                </value>
                <value>
                    <fullName>Assisant Leader</fullName>
                </value>
                <value>
                    <fullName>Assistant Chp Director</fullName>
                </value>
                <value>
                    <fullName>Assistant Treasurer</fullName>
                </value>
                <value>
                    <fullName>Biodiversity</fullName>
                </value>
                <value>
                    <fullName>Board Director</fullName>
                </value>
                <value>
                    <fullName>Brochure Manager</fullName>
                </value>
                <value>
                    <fullName>Budget Manager</fullName>
                </value>
                <value>
                    <fullName>Budget Officer</fullName>
                </value>
                <value>
                    <fullName>Campaign Finance Reform</fullName>
                </value>
                <value>
                    <fullName>Certified Leader</fullName>
                </value>
                <value>
                    <fullName>Chair</fullName>
                </value>
                <value>
                    <fullName>Chairman</fullName>
                </value>
                <value>
                    <fullName>Chapter Coordinator</fullName>
                </value>
                <value>
                    <fullName>Chapter Delegate</fullName>
                </value>
                <value>
                    <fullName>Chapter Delegate - Alt</fullName>
                </value>
                <value>
                    <fullName>Chapter Director</fullName>
                </value>
                <value>
                    <fullName>Chapter Finance</fullName>
                </value>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Coal Power Plants</fullName>
                </value>
                <value>
                    <fullName>Commisary Manager</fullName>
                </value>
                <value>
                    <fullName>Commissary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Confirmed__c</fullName>
        <label>Status Confirmed</label>
        <type>Date</type>
    </fields>
    <label>Leadership/Team Membership</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Contact__c</columns>
        <columns>Club_Entity__c</columns>
        <columns>Leader_Position__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{00000}</displayFormat>
        <label>Leadership/Team Membership Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leadership/Team Membership</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Managed_in_ANSEL</fullName>
        <active>true</active>
        <description>Leadership record or its entity is managed in ANSEL for the time being and cannot be modified directly in Salesforce.</description>
        <errorConditionFormula>$User.Alias &lt;&gt; &apos;ciron&apos; 
&amp;&amp; 
$User.Alias &lt;&gt; &apos;lmill&apos;
&amp;&amp;
$Profile.Name &lt;&gt; &apos;System Administrator&apos; 
&amp;&amp; 
Club_Entity__r.Bypass_Validations__c = false
&amp;&amp;
Club_Entity__r.Managed_in_ANSEL__c  = true
&amp;&amp; 
Leader_Position__r.Code__c &lt;&gt; &apos;ADD1&apos;</errorConditionFormula>
        <errorMessage>This leadership record or its entity is managed in ANSEL and cannot be modified in Salesforce.</errorMessage>
    </validationRules>
</CustomObject>